--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title> Emily Billow Index </head> </title>
 <br>
 <style> header {
-background-color: yellow; } </style> 
+background-color: blue; } </style> 
 <body>
 <header> <b> EMILY BILLOW </b> 
 <br>
