--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head> 
+	<head>
 		<title> Emily Billow Index </head> </title>
-<br>
+		<style>
+@import url('https://fonts.googleapis.com/css?family=Baloo+Tammudu');
+</style>
+		<link rel="stylesheet" href="Stylesheet.css">
+
 <body>
-<header> <b> EMILY BILLOW </b> 
+<header> <b> EMILY BILLOW </b> </header>
 <br>
 
 <p> IML 300 Reading and Writing the Web </p>
-<head> 
+<head>
 	<title> Emily Billow IML 300 </title>
 </head>
-
+<header>
 	 <nav> <a href="weeklyresponses.html"> Weekly Responses </a> &nbsp &nbsp &nbsp
 	<a href="Projects.html" > Projects</a></nav> </header>
 
@@ -23,11 +27,11 @@
 	<li> Yellow lover </li>
 </ul>
 
-<br><br>
+<br>
 <img src="http://worldbuilding.usc.edu/w/uploads/2016/09/MAP_White_Formal.jpg" width"500" height="110" align=center>
-<br><br><br><br>
-<img src="https://static1.fjcdn.com/thumbnails/comments/Usopp+is+my+favorite+strawhat+in+my+eyes+hes+already+_9b5f77b8cdbac512f1d3bb429538ecbd.png" 
+<br><br>
+<img src="https://static1.fjcdn.com/thumbnails/comments/Usopp+is+my+favorite+strawhat+in+my+eyes+hes+already+_9b5f77b8cdbac512f1d3bb429538ecbd.png"
 
 </body>
-<br><br><br><br><br><br><br><br>
+<br><br><br><br>
 <footer> Updated on August 30 <br><br> </footer>
