--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <header>
 	 <nav> <a href="weeklyresponses.html"> Weekly Responses </a> &nbsp &nbsp &nbsp
-	<a href="Projects.html" > Projects</a></nav> </header>
+	<a href="projects.html" > Projects </a></nav> </header>
 
 	<br><br>
 
