--- a/projects.html
+++ b/projects.html
@@ -3,3 +3,26 @@
 <header> <b> Emily's Projects </header> </b>
 <br><br>
 <head> Project 1 </head>
+
+<h1> Part 1: Concept Ideation
+  <p> Yoko Honda is an artist who creates digital paintings and prints centered around 1980’s city and beach culture. I love her nostalgic LA style and although it is clearly 80’s influenced there is also a very contemporary feel to her art. I think the simple website design is perfectly suited to show off her pieces and I really like the contrasting black background.
+<br> <img src="YOKOHONDA.png" width="500" height="300">
+<br>
+<p> Alicia Haberman is hard to pin down with one concept because she does illustrations, graphics, and set design. Her website exhibits so much work and I find it inspiring because she spans different fields and jobs yet still has a cohesive and easily navigable website. I like it because I think I will eventually showcase many mediums and it is nice to see such an organized, informative, and intriguing visual style.
+<br> <img src="AliciaHaberman.png" width="500" height="300">
+<br>
+<p> My absolute favorite website is that of Robby Leonardi, who hosts an “interactive resume” and illustrated portfolio for his work. His concept is playful, cartoony character animation and cute design. This is the most inspiring to me because it is similar to what I hope my cartoon and animation style can be one day. Not only do I like his graphics, but the website is literally explorable. You move the character “Robby Leonardi” through likes/dislikes, skills, awards, and more. It is a fun and extremely creative way to showcase his artistic skills.
+<br> <img src="RobbyLeonardi.png" width="500" height="300">
+<img src="RobbyLeonardi2.png" width="500" height="300">
+<br>
+<p> The portfolio of Tao Tajima, a director and filmmaker, is also very creative as a website. It’s motion graphics and floating images reflect the perfect style for that of someone who makes pictures come to life. His concept is clean cut and professional, with just a hint of flashy. I like the website a lot because of the way he coded his images and pages to constantly flow and move, I’d like to learn how to do this.
+<br> <img src="TaoTajima.png" width="500" height="300">
+<br> <br>
+<p> My work <br><br> 1. Image/Video
+<br>  <img src="Finalscene.0271.png" width="500" height="300">
+<br> 2. Video
+<br> <img src="screenhatstill00.jpg" width="600" height="350">
+<br> 3. Image
+<br> <img src="IMG_9096.JPG" width="500" height="300">
+<br> 4. Animation
+<br> <img src="Billow_Morph00.jpg" width="450" height="300">
