--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <head>
 	<title> Emily Billow IML 300 </title>
 </head>
-<header>
+<h1>
 	 <nav> <a href="weeklyresponses.html"> Weekly Responses </a> &nbsp &nbsp &nbsp
-	<a href="projects.html" > Projects </a></nav> </header>
+	<a href="projects.html" > Projects </a></nav> </h1>
 
 	<br><br>
 
