--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 <header> <b> Emily's Projects </header> </b>
 <br><br>
 <head> Project 1 </head>
-
-<h1> Part 1: Concept Ideation
+<p>
+<h1> Part 1: Concept Ideation </h1> 
   <p> Yoko Honda is an artist who creates digital paintings and prints centered around 1980’s city and beach culture. I love her nostalgic LA style and although it is clearly 80’s influenced there is also a very contemporary feel to her art. I think the simple website design is perfectly suited to show off her pieces and I really like the contrasting black background.
 <br> <img src="YOKOHONDA.png" width="500" height="300">
 <br>
