--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <br><br>
 <head> Project 1 </head>
 <p>
-<h1> Part 1: Concept Ideation </h1> 
+<h1> Part 1: Concept Ideation </h1>
   <p> Yoko Honda is an artist who creates digital paintings and prints centered around 1980’s city and beach culture. I love her nostalgic LA style and although it is clearly 80’s influenced there is also a very contemporary feel to her art. I think the simple website design is perfectly suited to show off her pieces and I really like the contrasting black background.
 <br> <img src="YOKOHONDA.png" width="500" height="300">
 <br>
@@ -26,3 +26,5 @@
 <br> <img src="IMG_9096.JPG" width="500" height="300">
 <br> 4. Animation
 <br> <img src="Billow_Morph00.jpg" width="450" height="300">
+<br> <p> Sitemap <br>
+  <img src="sitemapIML300.png" width="500" height="300">
