boxy and weekly 4

--- a/boxywebsite.html
+++ b/boxywebsite.html
@@ -11,7 +11,7 @@
     </div>
     <nav>
       <a href="#">
-      <div class="links">
+      <div class="links" id="firstlink">
     first link
       </div>
       </a>
